# LlamaPredict

./: .env.testnet  .gitignore  Cargo.toml  Makefile  README.md
amm/contracts/factory/: Cargo.toml  lib.rs
amm/contracts/pair/: Cargo.toml  lib.rs
amm/contracts/router/: Cargo.toml  lib.rs
amm/traits/: Cargo.toml  router.rs
contracts/conditional_psp22/: Cargo.toml  README.md  lib.rs
contracts/market/: Cargo.toml  errors.rs  lib.rs
contracts/minty_psp22/: Cargo.toml  lib.rs
contracts/predictor/: Cargo.toml  errors.rs  lib.rs  price.ipynb  tests.rs
contracts/traits/: Cargo.toml  errors.rs  lib.rs
example/: call.sh
frontend/: .commitlintrc.js  .env  .eslintrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/components/: Card.vue  MarketCard.vue  MarketChart.vue  Navbar.vue  NumberInput.vue  WalletButton.vue
frontend/src/components/ThemeChange/: data.ts  index.vue  types.ts
frontend/src/components/modals/: BaseModal.vue  ModalsController.vue  SelectAccountModal.vue  TxnSuccessModal.vue
frontend/src/config/: index.ts
frontend/src/config/nprogress/: index.ts
frontend/src/layouts/: index.vue
frontend/src/markets/: README.md  markets.json
frontend/src/router/: index.ts
frontend/src/sdk/: contract.ts  factory.ts  index.ts  predictor.ts  psp22.ts  router.ts  utils.ts
frontend/src/sdk/abi/: conditional_psp22.json  factory_contract.json  minty_psp22.json  pair_contract.json  predictor.json  router_contract.json
frontend/src/sdk/interact/: contractTx.ts  decodeOutput.ts  getExtrinsicErrorMessage.ts  getGasLimit.ts  index.ts
frontend/src/store/: account.ts  index.ts  testStore.ts
frontend/src/styles/: apexcharts.css  main.css
frontend/src/utils/: abbreviate.ts  encoding.ts  formatAmount.ts  index.ts  localStorage.ts  parseMarket.ts  validation.ts
frontend/src/views/: Admin.vue  ErrorPage.vue  Faucet.vue  Home.vue  Market.vue  StoreTest.vue
frontend/types/: auto-imports.d.ts  components.d.ts
scripts/: deploy.sh  deploy_all.sh  instantiate.sh
