[package]
name = "conditional_psp22"
authors = ["Åukasz Ptak <lukasz@ulam.io>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink = { version = "4.3", default-features = false }
ink_primitives = { version = "4.3", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

psp22 = { version = "0.2.1" , default-features = false, features = ["ink-as-dependency"] }

[lib]
path="lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
]
ink-as-dependency = []
e2e-tests = []
