[package]
name = "market"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
conditional_psp22 = { path = "../conditional_psp22", default-features = false, features = ["ink-as-dependency"] }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }
traits = { path = "../traits", default-features = false }
psp22 = { version = "0.2.1" , default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "conditional_psp22/std",
    "psp22/std",
]
ink-as-dependency = []
e2e-tests = []
