[package]
name = "traits"
version = "0.1.0"
authors = ["Åukasz Ptak <lukasz@ulam.io>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"], optional = true }
psp22 = { version = "0.2.1" , default-features = false, features = ["ink-as-dependency"] }


[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
]
ink-as-dependency = []
e2e-tests = []
